# Rhodo

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: code-quality.yml.disabled
Application/: Application.cpp  CMakeLists.txt
Examples/: CMakeLists.txt
Examples/src/: Application.cpp
Rhodo/: CMakeLists.txt  Rhodo.cppm
Rhodo/Core/: CMakeLists.txt  Core.hpp  EntryPoint.cpp  PlatformDetection.h
Rhodo/Debug/: Debug.cppm
Rhodo/Logger/: CMakeLists.txt  Logger.cpp  Logger.cppm  LoggerImpl.cppm  Structures.cppm
Rhodo/Signals/: CMakeLists.txt  ScopedConnection.cppm  Signal.cppm  SignalHub.cppm  Signals.cppm
Rhodo/include/: Rhodo.h
Rhodo/include/Rhodo/Core/: Core.h  EntryPoint.h  Logger.h  PlatformDetection.h
Rhodo/include/Rhodo/Events/: Signal.h
Rhodo/include/Rhodo/Events/Input/: GamepadCodes.h  KeyCodes.h  MouseCodes.h
Rhodo/include/Rhodo/Signals/: ScopedConnection.h  Signal.h  SignalHub.h  Signals.h
Rhodo/src/: Rhodo.h  rhpch.cpp  rhpch.h
Rhodo/src/Core/: Logger.cpp
Rhodo/src/PlatformSpecific/GLFW/: GlfwWindow.cpp  GlfwWindow.h
Rhodo/src/Rhodo/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  PlatformDetection.h  Window.cpp  Window.h
Rhodo/src/Rhodo/Events/: ApplicationEvent.h  Event.h  EventSystems.cpp  EventSystems.h  GamepadEvent.h  KeyboardEvent.h  MouseEvent.h  Polling.cpp  Polling.h  test.h
Rhodo/src/Rhodo/Events/Input/: GamepadCodes.h  Input.h  KeyCodes.h  MouseCodes.h
Tests/: CMakeLists.txt  SignalTests.cpp
Tests/Application/: CMakeLists.txt
Tests/Rhodo/: CMakeLists.txt
Tests/Rhodo/Core/: CMakeLists.txt
Tests/Rhodo/Logger/: CMakeLists.txt  LoggerTests.cpp
Tests/Rhodo/Signals/: CMakeLists.txt  SignalTests.cpp
application/: .clang-format  .clang-tidy  Application.cpp  CMakeLists.txt
cmake/: ClangFormat.cmake  ClangTidy.cmake  CodeQuality.cmake  EnforceLayout.cmake  Summary.cmake
docs/: CODE_QUALITY.md  ENFORCEMENT.md  ENFORCEMENT_QUICK.md  MODULE_NAMING.md
engine/: .clang-format  .clang-tidy  CMakeLists.txt  Rhodo.cppm
engine/core/: Asserts.cppm  CMakeLists.txt  Core.cppm  Core.hpp  EntryPoint.cpp
engine/core/asserts/: Asserts.cppm  CMakeLists.txt
engine/core/logger/: CMakeLists.txt  Logger.cppm  LoggerImpl.cppm  Structures.cppm
engine/core/memory/: Allocator.cppm  CMakeLists.txt  Category.cppm  Hooks.cppm  Memory.cppm
engine/core/signals/: CMakeLists.txt  Hooks.cppm  ScopedConnection.cppm  ScopedConnectionImpl.cppm  Signal.cppm  SignalHub.cppm  SignalHubImpl.cppm  SignalImpl.cppm  Signals.cppm
engine/debug/: Asserts.cppm  CMakeLists.txt  Config.cppm  Debug.cppm  Memory.cppm  Profiling.cppm  ScopeGuards.cppm
engine/infrastructure/: CMakeLists.txt  Infrastructure.cppm
engine/infrastructure/debug/: CMakeLists.txt  Debug.cppm  Profiling.cppm
engine/infrastructure/instrumentation/: CMakeLists.txt  Instrumentation.cppm
engine/infrastructure/instrumentation/memory/: CMakeLists.txt  MemoryProfiler.cppm
engine/infrastructure/instrumentation/profiling/: CMakeLists.txt  Profiler.cppm
engine/infrastructure/instrumentation/signals/: CMakeLists.txt  SignalProfiler.cppm
engine/instrumentation/: CMakeLists.txt  Instrumentation.cppm
engine/instrumentation/memory/: CMakeLists.txt  MemoryProfiler.cppm
engine/instrumentation/profiling/: CMakeLists.txt  Profiler.cppm
engine/instrumentation/signals/: CMakeLists.txt  SignalProfiler.cppm
engine/io/: CMakeLists.txt  Io.cppm
engine/io/packing/: CMakeLists.txt  Packing.cppm
engine/io/vfs/: CMakeLists.txt  Vfs.cppm
engine/logger/: CMakeLists.txt  Logger.cppm  LoggerImpl.cppm  Structures.cppm
engine/memory/: Allocator.cppm  CMakeLists.txt  Category.cppm  Hooks.cppm  Memory.cppm
engine/signals/: CMakeLists.txt  Hooks.cppm  ScopedConnection.cppm  ScopedConnectionImpl.cppm  Signal.cppm  SignalHub.cppm  SignalHubImpl.cppm  SignalImpl.cppm  Signals.cppm
tests/: .clang-tidy  CMakeLists.txt
tests/application/: ApplicationTests.cpp  CMakeLists.txt
tests/engine/: CMakeLists.txt
tests/engine/Signals/: CMakeLists.txt  SignalTests.cpp
